fix miss align topnav

--- a/index.css
+++ b/index.css
@@ -12,6 +12,10 @@ body {
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .topnav {
   position: fixed;
   top: 0;
